[tool.poetry]
name = "rikkyoai-canvaslms-slackbot"
version = "0.1.0"
description = ""
authors = ["tsyu12345 <syukut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.0"
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
